CHANGED & FIXED: changed content and fixed overflowing
Synopsis was replaced with characters section, and overflowing element space are fixed.

--- a/AnimeContents/Action/ActionStyle.css
+++ b/AnimeContents/Action/ActionStyle.css
@@ -43,8 +43,11 @@ section {
     width: 100%;
 }
 
+/* --- TITLE --- */
+
 .anime-title {
     position: relative;
+    display: inline-block;
     top: 180px;
     left: 5%;
 }
@@ -56,18 +59,41 @@ section {
     font-size: 65px;
 }
 
-.anime-synopsis {
+/* --- 4 CHARACTERS  --- */
+
+.char-container {
     position: relative;
+    display: flex;
     top: 200px;
-    width: 50%;
     left: 5%;
+    gap: 3%;
+    width: 40%;
 }
 
-.anime-synopsis p {
+.char {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 120px;
+}
+
+.char p {
     position: relative;
     display: inline-block;
-    color: white;
+    text-align: center;
+    font-size: 20px;
+    color: rgb(255, 255, 255);
 }
+
+.char img {
+    position: relative;
+    height: 120px;
+    width: 120px;
+    border-radius: 100%;
+}
+
+/* --- RATING --- */
 
 .rating-container {
     top: 230px;
@@ -95,12 +121,15 @@ section {
     padding: 5px;
 }
 
+/* --- BUTTONS --- */
+
 .btn-container {
     position: relative;
     display: flex;
     top: 300px;
     left: 5%;
     gap: 20px;
+    width: 40%;
 }
 
 .jjk-button1 {
